kubeflow/apps/jupyter/jupyter-web-app/upstream/overlays/istio/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata: # kpt-merge: /jupyter-web-app
  name: jupyter-web-app
  annotations:
    internal.kpt.dev/upstream-identifier: 'networking.istio.io|DestinationRule|default|jupyter-web-app'
spec:
  host: jupyter-web-app-service.kubeflow.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
