kubeflow/apps/jupyter/jupyter-web-app/upstream/overlays/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata: # kpt-merge: /jupyter-web-app-jupyter-web-app
  name: jupyter-web-app-jupyter-web-app
  annotations:
    internal.kpt.dev/upstream-identifier: 'networking.istio.io|VirtualService|default|jupyter-web-app-jupyter-web-app'
spec:
  gateways:
  - kubeflow-gateway
  hosts:
  - '*'
  http:
  - headers:
      request:
        add:
          x-forwarded-prefix: /jupyter
    match:
    - uri:
        prefix: /jupyter/
    rewrite:
      uri: /
    route:
    - destination:
        host: jupyter-web-app-service.$(JWA_NAMESPACE).svc.$(JWA_CLUSTER_DOMAIN)
        port:
          number: 80
