kubeflow/apps/jupyter/jupyter-web-app/upstream/overlays/istio/authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata: # kpt-merge: /jupyter-web-app
  name: jupyter-web-app
  annotations:
    internal.kpt.dev/upstream-identifier: 'security.istio.io|AuthorizationPolicy|default|jupyter-web-app'
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account
  selector:
    matchLabels:
      app: jupyter-web-app
